@@ -841,20 +841,20 @@
   <h4>Installing from source</h4>
 
   <p>The latest source code can be downloaded manually from <a href=
-  "http://pecl.php.net/get/ingres">http://pecl.php.net/get/ingres</a> Once you
+  "http://pecl.php.net/get/ingres">http://pecl.php.net/get/ingres</a>. Once you
   have the source archive run through the following steps to build and install,
   note that <i>$II_SYSTEM</i> needs to be defined beforehand:</p>
 
   <ol>
     <li>Extract the archive, adapt the version number accordingly:
       <pre>
-tar -zxvf ingres-2.0.1.tgz
+tar -zxvf ingres-2.0.2.tgz
 </pre>
     </li>
 
     <li>Enter the newly created directory:
       <pre>
-cd ingres-2.0.1
+cd ingres-2.0.2
 </pre>
     </li>
 
