@@ -31,7 +31,7 @@
 extern zend_module_entry ingres_module_entry;
 #define phpext_ingres_ptr &ingres_module_entry
 
-#define PHP_INGRES_VERSION "2.0.2-dev"
+#define PHP_INGRES_VERSION "2.0.2"
 
 #ifdef PHP_WIN32
 #define PHP_II_API __declspec(dllexport)
